@@ -51,7 +51,7 @@ import itertools
 from multiprocessing import TimeoutError, cpu_count
 from multiprocessing.dummy.connection import Pipe
 from threading import Lock, RLock, Semaphore, BoundedSemaphore
-from threading import Event
+from threading import Event, Condition
 from queue import Queue
 
 #
@@ -79,17 +79,6 @@ class DummyProcess(threading.Thread):
             return 0
         else:
             return None
-
-#
-#
-#
-
-class Condition(threading._Condition):
-    # XXX
-    if sys.version_info < (3, 0):
-        notify_all = threading._Condition.notify_all.__func__
-    else:
-        notify_all = threading._Condition.notify_all
 
 #
 #
